# SillyTavernApp

./: .gitignore  AGENTS.md  BUILDING.md  README.md
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/moe/momokko/sillytavernapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: st-app-extension.js  webview-hooks.js
app/src/main/assets/nodejs-project/: config.yaml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/moe/momokko/sillytavernapp/: AssetExtractor.kt  GitSetup.kt  MainActivity.kt  NodeBridge.kt  NodeService.kt
app/src/main/res/drawable/: ic_launcher_logo.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/moe/momokko/sillytavernapp/: ExampleUnitTest.kt
docs/superpowers/specs/: 2026-05-28-app-control-bridge-design.md  2026-05-28-sillytavern-android-app-design.md  2026-05-29-git-filepicker-nomedia-notifications-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
